Fix spacing on contents

--- a/source/_style/stylesheet.css
+++ b/source/_style/stylesheet.css
@@ -94,11 +94,19 @@ h6.sub {
   font-size: 1rem;
 }
 
-blockquote > ul {
+blockquote > ul, 
+blockquote > ul ul {
   break-inside: avoid;
   list-style-position: inside;
   list-style-type: none;
-  margin-top: 0;
+}
+blockquote > ul {
+  margin: 0;
+  padding-left: 0;
+}
+blockquote > ul ul {
+  margin-top: .5rem;
+  margin-bottom: -.5rem;
 }
 ul.contents:before {
   content: "Contents";
